Finished lightMode for homeComponent, fixed buttonVisibility, fixed and adjusted style for interesting articles

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -32,6 +32,7 @@ header {
             li {
                 margin: 10px;
 
+
                 a {
                     padding: 10px;
                     background-color: var(--button-color);
@@ -41,6 +42,12 @@ header {
                 }
 
             }
+
+          mat-slide-toggle {
+            position: absolute;
+            right: 2%;
+            color: white;
+          }
         }
     }
 }
