--- a/src/app/components/home/downloaded-item/downloaded-item.component.scss
+++ b/src/app/components/home/downloaded-item/downloaded-item.component.scss
@@ -2,11 +2,17 @@
 
 .download {
 
+
+
   margin: 10px;
 
   cursor: pointer;
   width: 200px;
   height: 70%;
+
+  mat-card-title {
+    font-size: medium;
+  }
 
   #description {
     color: gray;
