--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,141 +1,144 @@
 .home {
-    width: 100%;
-    height: 150%;
+  width: 100%;
+  height: 150%;
 
-    .container {
-        position: relative;
-        height: 100%;
-        background-color: rgb(73, 69, 69);
+  .container {
+    position: relative;
+    height: 100%;
+    background-color: rgb(73, 69, 69);
 
-        input {
-            color: white;
-        }
-
-        .logo {
-            position: absolute;
-
-            width: 20vw;
-            height: 20vw;
-
-            margin-top: 50px;
-            left: 40%;
-
-            background-color: transparent;
-            background: url('../../../assets/logo.png') no-repeat;
-            background-size: 20vw;
-            z-index: 10;
-        }
-
-        .background {
-            position: absolute;
-
-            height: 40%;
-            width: 100%;
-
-            background-blend-mode: multiply;
-            background-size: contain;
-            background: url('../../../assets/background-serach.jpg') no-repeat;
-            background-size: 100%;
-        }
-
-        .bar {
-            position: absolute;
-
-            width: 60%;
-            left: 20%;
-            top: 25%;
-        }
-
-        .authors-container {
-          position: absolute;
-          background: lightgrey;
-          //height: 30vh;
-          height: 300px;
-          width: 100%;
-          top: 40%;
-          text-align: center;
-        }
-
-        .downloaded-items-container{
-          position: absolute;
-          background: black;
-          //height: 30vh;
-          height: 300px;
-          width: 100%;
-          top: 65%;
-        }
-
-        .authors-title {
-          height: 10%;
-          padding: 1%;
-          color : black;
-          font-weight: bold;
-        }
-
-      .best-authors {
-        position: absolute;
-        background: lightgrey;
-        height: 80%;
-        width: 97%;
-        left: 1.5%;
-        top: 18%;
-        overflow-x: scroll;
-        display: flex;
-        flex-direction: row;
-        &::-webkit-scrollbar {
-          display: none
-        }
-      }
-
-      .downloaded-items-title{
-          height: 10%;
-          padding: 1%;
-          color : white;
-          text-align: left;
-        }
-
-      .most-downloaded{
-        position: absolute;
-        background: black;
-        border: 1px solid black;
-        height: 100%;
-        width: 100vw;
-        left: 1.5%;
-        top: 18%;
-        overflow-x: scroll;
-        display: flex;
-        flex-direction: row;
-        &::-webkit-scrollbar {
-          display: none
-        }
-      }
-
-        .scroll-right {
-          position: absolute;
-          left: 95%;
-          top: 45%;
-          background: url('../../../assets/arrowR.png') no-repeat;
-          background-size: 3vw;
-          width: 3vw;
-          height: 3vw;
-          border: none;
-          opacity: 70%;
-          display: block;
-        }
-
-        .scroll-left {
-          position: absolute;
-          left: 2%;
-          top: 45%;
-          background: url('../../../assets/arrowL.png') no-repeat;
-          background-size: 3vw;
-          width: 3vw;
-          height: 3vw;
-          border: none;
-          opacity: 70%;
-          display: none;
-        }
+    input {
+      color: white;
     }
+
+    .logo {
+      position: absolute;
+
+      width: 20vw;
+      height: 20vw;
+
+      margin-top: 50px;
+      left: 40%;
+
+      background-color: transparent;
+      background: url('../../../assets/logo.png') no-repeat;
+      background-size: 20vw;
+      z-index: 10;
+    }
+
+    .background {
+      position: absolute;
+
+      height: 40%;
+      width: 100%;
+
+      background-blend-mode: multiply;
+      background-size: contain;
+      background: url('../../../assets/background-serach.jpg') no-repeat;
+      background-size: 100%;
+    }
+
+    .bar {
+      position: absolute;
+      color: black;
+      width: 60%;
+      left: 20%;
+      top: 25%;
+    }
+
+    .authors-container {
+      position: absolute;
+      background: black;
+      //height: 30vh;
+      height: 300px;
+      width: 100%;
+      top: 40%;
+      text-align: center;
+    }
+
+    .authors-title {
+      height: 10%;
+      padding: 1%;
+      color: white;
+      font-weight: bold;
+    }
+
+    .best-authors {
+      position: absolute;
+      background: black;
+      height: 80%;
+      width: 97%;
+      left: 1.5%;
+      top: 18%;
+      overflow-x: scroll;
+      display: flex;
+      flex-direction: row;
+
+      &::-webkit-scrollbar {
+        display: none
+      }
+    }
+
+    .downloaded-items-container {
+      position: absolute;
+      background: black;
+      //height: 30vh;
+      height: 300px;
+      width: 100%;
+      top: 65%;
+    }
+
+    .downloaded-items-title {
+      height: 10%;
+      padding: 1%;
+      color: white;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .most-downloaded {
+      position: absolute;
+      background: black;
+      height: 80%;
+      width: 97%;
+      left: 1.5%;
+      top: 18%;
+      overflow-x: scroll;
+      display: flex;
+      flex-direction: row;
+
+      &::-webkit-scrollbar {
+        display: none
+      }
+    }
+
+    .scroll-right {
+      position: absolute;
+      left: 95%;
+      top: 45%;
+      background: url('../../../assets/arrowR.png') no-repeat;
+      background-size: 3vw;
+      width: 3vw;
+      height: 3vw;
+      border: none;
+      opacity: 70%;
+      display: block;
+    }
+
+    .scroll-left {
+      position: absolute;
+      left: 2%;
+      top: 45%;
+      background: url('../../../assets/arrowL.png') no-repeat;
+      background-size: 3vw;
+      width: 3vw;
+      height: 3vw;
+      border: none;
+      opacity: 70%;
+      display: none;
+    }
+  }
+
   .scroll-up {
     position: fixed;
     left: 95%;
